--- a/Lab05/Lab05.csproj
+++ b/Lab05/Lab05.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E95F809D-A37B-4DC4-B0DC-B14200867FE4}</ProjectGuid>
+    <ProjectGuid>{AD3EFB4C-D7BB-43D6-B71A-C9DA04D34F11}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Lab03</RootNamespace>
-    <AssemblyName>Lab03</AssemblyName>
+    <RootNamespace>Lab05</RootNamespace>
+    <AssemblyName>Lab05</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,34 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Curso.cs">
+    <Compile Include="ManPerson.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Curso.Designer.cs">
-      <DependentUpon>Curso.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmConDB.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmConDB.Designer.cs">
-      <DependentUpon>frmConDB.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Persona.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Persona.Designer.cs">
-      <DependentUpon>Persona.cs</DependentUpon>
+    <Compile Include="ManPerson.Designer.cs">
+      <DependentUpon>ManPerson.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Curso.resx">
-      <DependentUpon>Curso.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmConDB.resx">
-      <DependentUpon>frmConDB.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Persona.resx">
-      <DependentUpon>Persona.cs</DependentUpon>
+    <EmbeddedResource Include="ManPerson.resx">
+      <DependentUpon>ManPerson.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
