--- a/lab06/lab06.csproj
+++ b/lab06/lab06.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AD3EFB4C-D7BB-43D6-B71A-C9DA04D34F11}</ProjectGuid>
+    <ProjectGuid>{EEB7778B-FF71-4BBF-85E4-34145A67D03B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Lab05</RootNamespace>
-    <AssemblyName>Lab05</AssemblyName>
+    <RootNamespace>lab06</RootNamespace>
+    <AssemblyName>lab06</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
